# vmnlcli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  vmnlcli.py
src/vmnlcli/: __init__.py
