[project]
name = "vmnlcli"
dynamic = ["readme"]
version = "0.3.0"
authors = [{name="Thomas Waldmann", email="twaldmann@thinkmo.de"}]
description = "command line interface for some dutch velomobile websites"
requires-python = ">=3.10"
keywords = ["velomobile", "odometer", "cli", "velomobiel.nl", "intercitybike.nl", "welmers.net"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
license = {text="MIT"}
dependencies = [
  "requests",
]

[project.urls]
"Homepage" = "http://github.com/thomaswaldmann/velomobielnl/"
"Bug Tracker" = "http://github.com/thomaswaldmann/velomobielnl/issues"
"Documentation" = "http://github.com/thomaswaldmann/velomobielnl/"
"Repository" = "http://github.com/thomaswaldmann/velomobielnl/"

[project.scripts]
vmnlcli = "vmnlcli:main"

[tool.setuptools]
# We want to install all the files in the package directories...
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
